--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
           <p class="text-gray-500 dark:text-gray-400 mt-1">پلتفرم هوشمند تولید محتوای ووکامرس و وردپرس</p>
         </div>
         <div class="text-gray-500 dark:text-gray-400 space-y-1">
-          <p>ایمیل: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="mailto:hello@pushly.app">hello@pushly.app</a></p>
-          <p>تلفن: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="tel:09123456789">09123456789</a></p>
+          <p>ایمیل: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="mailto:hello@pushly.app">info@miladsoltani.me</a></p>
+          <p>تلفن: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="tel:09123456789">09190978688</a></p>
         </div>
         <div class="flex justify-center md:justify-start gap-4">
           <a href="#" class="w-10 h-10 bg-gray-100 dark:bg-gray-800 rounded-lg flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-brand-600 dark:hover:text-brand-400 hover:bg-brand-50 dark:hover:bg-brand-900/20 transition-all">
