--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
         state:'idle',
         message:'',
         formData:{ name:'', phone:'', website:'', message:'' },
-        accessKey:'YOUR_ACCESS_KEY_HERE', // Replace with your real key
+        accessKey:'3fec5832-5eba-466b-8544-3b3309db27bb', 
         submit(){
           if(!this.formData.name || !this.formData.phone){
             this.message='لطفاً نام و شماره تماس را وارد کنید.';
