--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     <nav class="container mx-auto px-5 sm:px-8 py-4">
       <div class="flex items-center justify-between">
         <a href="#" class="flex items-center gap-2 text-2xl font-extrabold text-gray-900 dark:text-white">
-          <span class="inline-flex w-9 h-9 items-center justify-center rounded-xl bg-brand-600 text-white shadow-glow">🚀</span>
+         <span class="inline-flex w-9 h-9 items-center justify-center rounded-xl bg-brand-600 shadow-glow">
+    <img src="https://miladsoltani.me/media/pushly/pushly-logo.png" alt="Pushly Logo" class="w-6 h-6">
+</span>
           <span>Pushly</span>
         </a>
         <div class="hidden md:flex items-center gap-6 text-sm">
