--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="flex items-center justify-between">
         <a href="#" class="flex items-center gap-2 text-2xl font-extrabold text-gray-900 dark:text-white">
          <span class="inline-flex w-9 h-9 items-center justify-center rounded-xl bg-brand-600 shadow-glow">
-    <img src="https://miladsoltani.me/media/pushly/pushly-logo.png" alt="Pushly Logo" class="w-5 h-5">
+    <img src="https://miladsoltani.me/media/pushly/pushly-logo.png" alt="Pushly Logo" class="w-9 h-9">
 </span>
           <span>Pushly</span>
         </a>
@@ -534,7 +534,9 @@
       <div class="grid md:grid-cols-3 gap-6 items-center text-center md:text-right">
         <div>
           <a href="#" class="text-2xl font-extrabold text-gray-900 dark:text-white inline-flex items-center gap-2">
-            <span class="inline-flex w-8 h-8 items-center justify-center rounded-lg bg-brand-600 text-white text-lg">🚀</span>
+           <span class="inline-flex w-9 h-9 items-center justify-center rounded-xl bg-brand-600 shadow-glow">
+    <img src="https://miladsoltani.me/media/pushly/pushly-logo.png" alt="Pushly Logo" class="w-9 h-9">
+</span>
             Pushly
           </a>
           <p class="text-gray-500 dark:text-gray-400 mt-1">پلتفرم هوشمند تولید محتوای ووکامرس و وردپرس</p>
