--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a href="#faq" class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors">سوالات</a>
         </div>
         <div class="hidden md:flex items-center gap-3">
-          <a href="#download" class="px-4 py-2 rounded-lg border border-gray-300 dark:border-gray-700 hover:shadow transition-all">دانلود</a>
+          <a href="https://miladsoltani.me/media/pushly/pushly.zip" class="px-4 py-2 rounded-lg border border-gray-300 dark:border-gray-700 hover:shadow transition-all">دانلود</a>
           <a href="#contact" class="px-4 py-2 rounded-lg bg-brand-600 text-white hover:bg-brand-700 shadow-glow transition-all">مشاوره رایگان</a>
           <button @click="toggle()" class="w-10 h-10 grid place-items-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors" title="تغییر تم">
             <i class="fas fa-sun" x-show="!isDarkMode"></i>
