--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </p>
         <div class="mt-7 flex flex-col sm:flex-row gap-3">
           <a href="#contact" class="px-6 py-3 rounded-xl bg-brand-600 text-white hover:bg-brand-700 shadow-glow text-center transition-all">درخواست مشاوره رایگان</a>
-          <a href="https://miladsoltani.me/media/pushly/pushly.zip" class="px-6 py-3 rounded-xl border border-gray-300 dark:border-gray-700 hover:shadow text-center transition-all"><i class="fas fa-play ml-2"></i> دانلود پوشلی</a>
+          <a href="https://miladsoltani.me/media/pushly/pushly.zip" class="px-6 py-3 rounded-xl border border-gray-300 dark:border-gray-700 hover:shadow text-center transition-all"><i class="fas fa-download  ml-2"></i> دانلود پوشلی</a>
         </div>
         <div class="mt-8 flex flex-wrap gap-4 text-sm text-gray-500 dark:text-gray-400">
           <div class="inline-flex items-center gap-2"><i class="fa fa-shield text-brand-600"></i> اتصال امن API</div>
