--- a/index.html
+++ b/index.html
@@ -275,10 +275,7 @@
                   <i class="fas fa-check text-green-500"></i>
                   اتصال به سرورهای دیسکورد
                 </li>
-                <li class="flex items-center gap-2">
-                  <i class="fas fa-check text-green-500"></i>
-                  تنظیم زمان‌بندی انتشار
-                </li>
+                
               </ul>
             </div>
           </div>
@@ -542,8 +539,8 @@
           <p class="text-gray-500 dark:text-gray-400 mt-1">پلتفرم هوشمند تولید محتوای ووکامرس و وردپرس</p>
         </div>
         <div class="text-gray-500 dark:text-gray-400 space-y-1">
-          <p>ایمیل: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="mailto:hello@pushly.app">info@miladsoltani.me</a></p>
-          <p>تلفن: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="tel:09123456789">09190978688</a></p>
+          <p>ایمیل: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="mailto:info@miladsoltani.me">info@miladsoltani.me</a></p>
+          <p>تلفن: <a class="hover:text-brand-600 dark:hover:text-brand-400 transition-colors" href="tel:09190978688">09190978688</a></p>
         </div>
         <div class="flex justify-center md:justify-start gap-4">
           <a href="#" class="w-10 h-10 bg-gray-100 dark:bg-gray-800 rounded-lg flex items-center justify-center text-gray-600 dark:text-gray-400 hover:text-brand-600 dark:hover:text-brand-400 hover:bg-brand-50 dark:hover:bg-brand-900/20 transition-all">
