--- a/index.html
+++ b/index.html
@@ -384,45 +384,121 @@
 
       <!-- AI Models Comparison Section -->
       <div class="mt-16 fade-up" data-io>
-        <h3 class="text-2xl font-bold text-center text-gray-900 dark:text-white mb-8">مقایسه مدل‌های هوش مصنوعی</h3>
+        <h3 class="text-2xl font-bold text-center text-gray-900 dark:text-white mb-4">مقایسه مدل‌های هوش مصنوعی</h3>
+        <p class="text-center text-gray-600 dark:text-gray-400 mb-8 max-w-3xl mx-auto">
+          Pushly از تمام پلتفرم‌های معتبر AI پشتیبانی می‌کند تا بهترین تجربه را برای شما فراهم آورد
+        </p>
+        
         <div class="overflow-x-auto">
           <div class="min-w-full">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+            <div class="grid grid-cols-1 md:grid-cols-5 gap-4">
               <!-- Headers -->
               <div class="hidden md:block"></div>
               <div class="bg-blue-50 dark:bg-blue-900/20 rounded-xl p-4 text-center">
-                <h4 class="font-bold text-blue-600 dark:text-blue-400">GPT (OpenAI)</h4>
-                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">ابری، پرقدرت</p>
+                <h4 class="font-bold text-blue-600 dark:text-blue-400">OpenAI GPT</h4>
+                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">مستقیم از OpenAI</p>
+              </div>
+              <div class="bg-indigo-50 dark:bg-indigo-900/20 rounded-xl p-4 text-center">
+                <h4 class="font-bold text-indigo-600 dark:text-indigo-400">OpenRouter</h4>
+                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">دسترسی به ۱۰۰+ مدل</p>
               </div>
               <div class="bg-green-50 dark:bg-green-900/20 rounded-xl p-4 text-center">
-                <h4 class="font-bold text-green-600 dark:text-green-400">Gemini (Google)</h4>
-                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">ابری، چندوسیله‌ای</p>
+                <h4 class="font-bold text-green-600 dark:text-green-400">Google Gemini</h4>
+                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">چندوسیله‌ای قدرتمند</p>
               </div>
               <div class="bg-purple-50 dark:bg-purple-900/20 rounded-xl p-4 text-center">
-                <h4 class="font-bold text-purple-600 dark:text-purple-400">Ollama (محلی)</h4>
-                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">آفلاین، خصوصی</p>
+                <h4 class="font-bold text-purple-600 dark:text-purple-400">Ollama</h4>
+                <p class="text-xs text-gray-600 dark:text-gray-400 mt-1">محلی و آفلاین</p>
               </div>
 
-              <!-- Rows -->
+              <!-- کیفیت محتوا -->
               <div class="font-medium text-gray-700 dark:text-gray-300 py-3">کیفیت محتوا</div>
+              <div class="text-center py-3"><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i></div>
               <div class="text-center py-3"><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i></div>
               <div class="text-center py-3"><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-gray-300"></i></div>
               <div class="text-center py-3"><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-yellow-500"></i><i class="fas fa-star text-gray-300"></i><i class="fas fa-star text-gray-300"></i></div>
 
+              <!-- تنوع مدل‌ها -->
+              <div class="font-medium text-gray-700 dark:text-gray-300 py-3">تنوع مدل‌ها</div>
+              <div class="text-center py-3 text-orange-600">محدود</div>
+              <div class="text-center py-3 text-green-600">۱۰۰+ مدل</div>
+              <div class="text-center py-3 text-orange-600">محدود</div>
+              <div class="text-center py-3 text-green-600">۵۰+ مدل</div>
+
+              <!-- سرعت پاسخ -->
               <div class="font-medium text-gray-700 dark:text-gray-300 py-3">سرعت پاسخ</div>
               <div class="text-center py-3 text-orange-600">متوسط</div>
               <div class="text-center py-3 text-green-600">سریع</div>
+              <div class="text-center py-3 text-green-600">سریع</div>
               <div class="text-center py-3 text-green-600">خیلی سریع</div>
 
+              <!-- هزینه -->
               <div class="font-medium text-gray-700 dark:text-gray-300 py-3">هزینه</div>
               <div class="text-center py-3 text-red-600">بالا</div>
+              <div class="text-center py-3 text-orange-600">متغیر</div>
               <div class="text-center py-3 text-orange-600">متوسط</div>
               <div class="text-center py-3 text-green-600">رایگان</div>
 
+              <!-- حریم خصوصی -->
               <div class="font-medium text-gray-700 dark:text-gray-300 py-3">حریم خصوصی</div>
               <div class="text-center py-3 text-orange-600">متوسط</div>
               <div class="text-center py-3 text-orange-600">متوسط</div>
+              <div class="text-center py-3 text-orange-600">متوسط</div>
               <div class="text-center py-3 text-green-600">عالی</div>
+
+              <!-- بهترین کاربرد -->
+              <div class="font-medium text-gray-700 dark:text-gray-300 py-3">بهترین کاربرد</div>
+              <div class="text-center py-3 text-sm text-gray-600 dark:text-gray-400">محتوای حرفه‌ای</div>
+              <div class="text-center py-3 text-sm text-gray-600 dark:text-gray-400">انتخاب گسترده</div>
+              <div class="text-center py-3 text-sm text-gray-600 dark:text-gray-400">تحلیل تصاویر</div>
+              <div class="text-center py-3 text-sm text-gray-600 dark:text-gray-400">پروژه‌های محلی</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- OpenRouter Highlight Section -->
+        <div class="mt-8 bg-gradient-to-br from-indigo-50 to-blue-50 dark:from-indigo-900/20 dark:to-blue-900/20 rounded-2xl p-6 border border-indigo-200 dark:border-indigo-700">
+          <div class="flex items-start gap-4">
+            <div class="w-12 h-12 bg-indigo-600 rounded-xl flex items-center justify-center flex-shrink-0">
+              <i class="fas fa-network-wired text-white text-lg"></i>
+            </div>
+            <div class="flex-1">
+              <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
+                چرا OpenRouter.ai انتخاب هوشمندی است؟
+              </h4>
+              <p class="text-gray-600 dark:text-gray-400 mb-4">
+                OpenRouter دسترسی یکپارچه به بیش از ۱۰۰ مدل هوش مصنوعی از برندهای مختلف را فراهم می‌کند
+              </p>
+              <div class="grid md:grid-cols-2 gap-4 text-sm">
+                <div class="space-y-2">
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-check text-indigo-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">دسترسی به Claude، GPT-4، Llama و...</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-check text-indigo-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">قیمت‌گذاری شفاف و رقابتی</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-check text-indigo-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">یک API برای همه مدل‌ها</span>
+                  </div>
+                </div>
+                <div class="space-y-2">
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-check text-indigo-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">بدون محدودیت rate limit سخت</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-check text-indigo-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">پشتیبانی از مدل‌های open-source</span>
+                  </div>
+                  <div class="flex items-center gap-2">
+                    <i class="fas fa-check text-indigo-600"></i>
+                    <span class="text-gray-700 dark:text-gray-300">امکان تست رایگان مدل‌ها</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
