--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+<!-- Groq Highlight Section -->
+        <div class="mt-8 bg-gradient-to-br from-orange-50 to-red-50 dark:from-orange-900/20 dark:to-red-900/20 rounded-2xl p-6 border border-orange-200 dark:border-orange-700">
+          <div class="flex items-start gap-4">
+            <div class="w-12 h-12 bg-orange-600 rounded-xl flex items-center justify-center flex-shrink-0">
+              <i class="fas fa-bolt text-white text-lg"></i>
+            </div>
+            <div class="flex-1">
+              <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
+                ⚡ Groq: سرعت شگفت‌<!DOCTYPE html>
 <html lang="fa" dir="rtl" x-data="themeSwitcher()" :class="{ 'dark': isDarkMode }" x-init="init()">
 <head>
   <meta charset="UTF-8" />
